--- a/web_app/templates/predicted.html
+++ b/web_app/templates/predicted.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel='stylesheet' href="{{ url_for('static',filename='predicted.css')}}"
+<link rel='stylesheet' href="{{ url_for('static',filename='predicted.css')}}">
 </head>
 <body>
 
