PROC_file updated

--- a/web_app/templates/predicted.html
+++ b/web_app/templates/predicted.html
@@ -5,10 +5,10 @@
 <body>
 
 <div id='p'>
-  
-<h1>{{pred}}</h1>
-  <a href='/'>Home page</a>
 
+<h1>{{pred}}
+  <a href='/'>Home page</a>
+</h1>
 </div>
 
 </body>
