PROC_file updated

--- a/web_app/templates/indata.html
+++ b/web_app/templates/indata.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="{{url_for('static',filename='indata.css')}}">
 </head>
 <body>
-<form action='/predicted' method='POST'>
+<form action="predict" method="POST">
 <div id='inner'>
 <table>
 <tr><td>
