required key added

--- a/web_app/templates/indata.html
+++ b/web_app/templates/indata.html
@@ -9,7 +9,7 @@
 <table>
 <tr><td>
 <div><label for="age">Age</label></td><td>
-<input type='number' name='age' id='age'></div></td></tr>
+<input type='number' name='age' id='age' required></div></td></tr>
 
 <tr>
   <td>
@@ -88,7 +88,7 @@
       <label for="cg">capital gain</label>
     </td>
     <td>
-<input type='number' id='cg' name='cg'></div>
+<input type='number' id='cg' name='cg' required></div>
 </td>
 </tr>
 <tr>
@@ -97,7 +97,7 @@
       <label for="cs">capital loss</label>
     </td>
     <td>
-<input type='number' id='cs' name='cs'></div>
+<input type='number' id='cs' name='cs' required></div>
 </td>
 </tr>
 <tr>
@@ -106,7 +106,7 @@
       <label for="hw">hours per week</label>
     </td>
     <td>
-<input type='number' id='hw' name='hw'></div>
+<input type='number' id='hw' name='hw' required></div>
 </td>
 </tr>
 </table>
